--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,7 +9,7 @@ body {
 
 header {
     width: 100%;
-    height: 70px;
+    height: 80px;
     background-color: transparent;
     display: flex;
     flex-direction: row;
@@ -58,6 +58,33 @@ header .right .nav-bar ul li {
 
 header .right .nav-bar ul li a {
     text-decoration: none;
-    color: black;
+    color: #000;
     font-size: 14px;
+}
+
+.contact {
+    background: #000;
+    width: 100px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    transition: border 0.3s ease-in-out;
+    transition: background 0.3s ease-in-out;
+}
+
+.contact:hover {
+    width: 98px;
+    height: 38px;
+    background: transparent;
+    border: #000 1px solid;
+}
+
+.contact:hover .contact-a {
+    color: #000 !important;
+}
+
+#contactA {
+    color: #fff;
 }
