--- a/src/css/style.css
+++ b/src/css/style.css
@@ -199,8 +199,14 @@ header .right .nav-bar ul li a {
     align-items: center;
     justify-content: center;
     padding: 40px;
-    /* overflow-y: scroll !important;
-    overflow-x: hidden; */
+ 
+
+    /* background: #87000022; */
+}
+
+.bots{
+    overflow-y: scroll !important;
+    display: flex;
 }
 
 .highlight {
@@ -216,7 +222,8 @@ header .right .nav-bar ul li a {
     height: 150px;
     margin: 20px;
     border-radius: 8px;
-    color: #fff;
+    /* color: #870000; */
+    /* background: #00000033; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -224,7 +231,7 @@ header .right .nav-bar ul li a {
 }
 
 .landing-page .container .botbox .box .title {
-    width: 80%;
+    width: 150px;
     display: flex;
     align-items: center;
     justify-content: start;
@@ -233,6 +240,7 @@ header .right .nav-bar ul li a {
 
 .landing-page .container .botbox .box .title h4 {
     margin: 0px;
+    color: #838383;
 }
 
 .landing-page .container .botbox .box .title span {
@@ -270,8 +278,8 @@ header .right .nav-bar ul li a {
 @media (max-width: 1166px) {
     .landing-page .container .botbox {
         /* overflow: hidden; */
-        overflow-x: auto;
-        white-space: nowrap;
+        /* overflow-x: auto; */
+        /* white-space: nowrap; */
         width: 100vw !important;
         /* height: auto; */
     }
@@ -280,7 +288,7 @@ header .right .nav-bar ul li a {
 
     .landing-page .container .botbox .box {
         width: 300px;
-        overflow: hidden;
+        /* overflow: hidden; */
     }
 
     /* .landing-page .container .botbox .box .title {
@@ -330,12 +338,12 @@ header .right .nav-bar ul li a {
     }
 
     .landing-page .container .botbox {
-        display: none;
+        /* display: none; */
     }
 
     .landing-page .container .top {
         width: 80%;
-        margin-top: -100px;
+        /* margin-top: -100px; */
     }
 
     .landing-page .container .top .title {
@@ -363,9 +371,9 @@ header .right .nav-bar ul li a {
 /* Screen width 362 */
 
 @media (max-width: 362px) {
-    .landing-page .container .top {
+    /* .landing-page .container .top {
         margin-top: -100px;
-    }
+    } */
     .landing-page .container .top .title h1 {
         font-size: 25px !important;
     }
